<resources>
    <string name="total_pengeluaran_kamu"
    >Total pengeluaran kamu:
    </string>
    <string name="rp_0">Rp.0</string>
    <string name="masukan_judul">Masukan judul</string>
    <string name="ex_belanja">ex: Belanja</string>
    <string name="masukan_jumlah_uang">Masukan jumlah uang</string>
    <string name="ex_1_000_000">ex: 10000</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pemasukan_kamu">Pemasukan kamu</string>
    <string name="pengluaran_kamu">Pengeluaran kamu</string>
    <string name="saldo_kamu">Saldo kamu</string>
    <string name="saldo">Saldo</string>
    <string name="reset">Reset</string>
    <string name="hutang_kamu">Hutang kamu</string>

    <string name="date_pattern">dd-MM-yyyy</string>

    <string name="dialog_title_saldo">Jumlah saldo kamu</string>
    <string name="dialog_message">Apakah kamu yakin?</string>
    <string name="dialog_simpan">Simpan</string>

    <string name="toast_isi_kolom">Isi semua kolom!</string>
    <string name="toast_hapus_berhasil">Data berhasil dihapus</string>
    <string name="app_name">Casher</string>
    <string name="total_pemasukan_kamu">Total pemasukan kamu:</string>
    <string name="graph">Graph</string>
    <string name="riwayat">Riwayat</string>
    <string name="kamu_belum_memiliki_data_dalam_2_hari_atau_lebih">Graph akan muncul apabila kamu memiliki 2 data atau
        lebih
    </string>

    <string name="pengeluaran">Pengeluaran</string>
    <string name="spinner_peringatan_data">Jumlah data kurang dari 2</string>
    <string name="konversi_excel_ditolak">Kamu harus memberi izin agar bisa menggunakan konversi excel</string>
    <string name="tidak_ada_iklan">Belum ada iklan yang tersedia</string>
    <string name="perhatian">Perhatian!</string>
    <string name="mengerti_bawa_kembali">Mengerti, bawa saya kembali</string>
    <string name="lakukan_konversi">Lakukan konversi ke format xls?</string>
    <string name="data_sudah_pernah_dikonversi">Data sudah dikonversi, silahkan buka kembali halaman untuk konversi
        ulang
    </string>
    <string name="konversi_tidak_diijinkan">Kamu tidak bisa menggunakan fitur konversi</string>
    <string name="mulai_konversi">Memulai konversi</string>
    <string name="selesai_konversi">Konversi telah selesai dan disimpan di folder Download</string>
    <string name="konversi_ke_excel">Konversi ke excel</string>
    <string name="ads">Ads</string>
    <string name="sebuah_tombol_gambar_untuk_menghapus_gambar">Sebuah tombol gambar untuk menghapus gambar</string>
    <string name="total">Total:</string>
    <string name="sebuah_tombol_gambar_untuk_mengedit_gambar" translatable="false">Sebuah_tombol_gambar_untuk_mengedit_gambar</string>
</resources>
