<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

    <TextView
            android:id="@+id/dialog_main_pemasukan_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pemasukan_kamu"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/dialog_main_pemasukan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_0"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="end"
            android:layout_toRightOf="@+id/dialog_main_pemasukan_tv"
            android:layout_toEndOf="@+id/dialog_main_pemasukan_tv"
            android:layout_alignParentRight="true"/>

    <TextView
            android:id="@+id/dialog_main_pengeluaran_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pengluaran_kamu"
            android:layout_below="@+id/dialog_main_pemasukan_tv"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/dialog_main_pengeluaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/dialog_main_pemasukan"
            android:text="@string/rp_0"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:layout_toRightOf="@+id/dialog_main_pengeluaran_tv"
            android:layout_toEndOf="@+id/dialog_main_pengeluaran_tv"
            android:layout_alignParentRight="true"/>

    <TextView
            android:id="@+id/dialog_main_hutang_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_main_pengeluaran_tv"
            android:text="@string/hutang_kamu"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/dialog_main_hutang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_0"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/dialog_main_pengeluaran"
            android:layout_marginRight="16dp"
            android:gravity="end"
            android:layout_toRightOf="@+id/dialog_main_saldo_tv"
            android:layout_toEndOf="@+id/dialog_main_saldo_tv"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    <TextView
            android:id="@+id/dialog_main_saldo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_main_hutang_tv"
            android:text="@string/saldo_kamu"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/dialog_main_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_0"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginEnd="16dp"
            android:layout_below="@+id/dialog_main_hutang"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:layout_toRightOf="@+id/dialog_main_hutang_tv"
            android:layout_toEndOf="@+id/dialog_main_hutang_tv"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    
</RelativeLayout>